# trustatlas

./: .env.example  .env.vercel  .gitignore  .npmrc  .vercelignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  mise.toml  renovate.json
.claude/: settings.json
.claude/commands/: dev.md
.claude/hooks/: etl-workflow-guard.sh
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml
_project_specs/session/: code-landmarks.md  current-state.md  decisions.md
_project_specs/todos/: active.md  backlog.md  completed.md
api/: eslint.config.js  package-lock.json  package.json
api/src/: health.test.ts  server.ts  vercel.ts
data/reference/: country_aliases.json  iso_map.csv  methodology.yaml
db/migrations/: 000_init.sql  001_confidence_intervals.sql  002_methodology.sql  003_fix_ess_eusilc_scale.sql  004_data_quality_flags.sql  005_exclude_from_gti.sql  006_add_freedom_trust_type.sql  006_remove_gti.sql  007_source_metadata_compliance.sql  008_add_evs_source.sql  (+5 more)
docs/: API_REFERENCE.md  ARCHITECTURE.md  ASSUMPTIONS.md  BOOTSTRAP.md  CHART_STANDARDS.md  CONTRIBUTING.md  DATA_MODEL.md  DATA_SOURCES.md  DATA_SOURCES_ROADMAP.md  DATA_WORKFLOW.md  DEVELOPMENT.md  ETL_PIPELINE.md  INTEGRATION_DESIGN.md  METHODOLOGY.md  STYLE.md  VISION_ROADMAP.md
etl/: pyproject.toml  requirements.txt  ruff.toml
etl/common/: __init__.py  base.py  countries.py  http.py  scaling.py
etl/data_quality/: __init__.py  checks.py  sweep.py
etl/jobs/: afrobarometer.py  anes.py  arabbarometer.py  asianbarometer.py  caucasus.py  ces.py  cpi.py  ess.py  eurobarometer.py  eusilc.py  evs.py  freedomhouse.py  gss.py  lapop.py  latinobarometro.py  lits.py  oecd.py  reuters_dnr.py  reuters_dnr_pdf.py  vdem.py  wgi.py  wjp.py  wpr_social_media.py  wvs.py
etl/pipelines/: __init__.py  aggregate_media.py  aggregate_pillars.py  aggregate_survey.py
etl/tests/: __init__.py  conftest.py
etl/tests/test_common/: __init__.py  test_countries.py  test_scaling.py
etl/trustatlas_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
etl/validation/: __init__.py  owid_benchmark.py
reports/: quality_sweep.csv
scripts/: dev_seed.py
web/: eslint.config.mjs  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
(+98 files in other folders)
