[project]
name = "trustatlas-etl"
version = "0.1.0"
description = "Trust Atlas ETL pipeline"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1.0",
    "requests>=2.31.0",
    "psycopg2-binary>=2.9.7",
    "python-dotenv>=1.0.0",
    "pydantic>=2.4.0",
    "click>=8.1.7",
    "openpyxl>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
    "mypy>=1.6.1",
    "types-requests>=2.31.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["common*", "jobs*", "pipelines*", "data_quality*", "validation*", "scripts*"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
